# credit-risk-pipeline

./: .env.example  .gitignore  DataDictionary.md  Dockerfile  Phase_0_Introduction.md  Phase_1_Setup.md  Phase_2_Dataset.md  Phase_3_Ingestion.md  Phase_4_Airflow.md  Phase_5_Great_Expectations.md  Phase_6_Cleaning.md  Phase_7_BigQuery.md  Project_Explanation_and_QnA.md  README.md  Setup.md  Troubleshooting.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci_pipeline.yml
airflow/: airflow.cfg  airflow.db
config/: config.yaml  logging.yaml
dags/: loan_risk_dag.py
dashboard/: index.html  server.py
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  credit_risk_expectations.json  my_suite.json
scripts/: generate_synthetic_data.py  profile_dataset.py  run_live_pipeline.py  stream_simulation.py  test_gx_api.py
src/: cleaning.py  ingestion.py  loader.py  transformation.py  validation.py
src/utils/: __init__.py  helpers.py  logger.py
tests/: test_basic.py  test_cleaning.py  test_ingestion.py  test_loader.py  test_transformation.py  test_validation.py
